# data-challenge

./: .gitignore  Makefile  README.md  docker-compose.yml  senior_de_challenge.md
.makefile/: clean_db.sh  init_db.sh  setup_calendar.sh
app/: app.Dockerfile  executor.py  main.py  pipeline_director.py  poetry.toml  pyproject.toml  requirements.txt
app/builder/: base_builder.py  customer_builder.py  exchange_rate_builder.py  pgsql_builder.py  transaction_builder.py
app/commons/: database.py  decorators.py  helpers.py  models.py
app/tests/builder/: test_base_builder.py
app/tests/commons/: test_helpers.py
resources/: customer.csv  exchange_rate.csv  transaction.csv
sql/: add_calendar_year.sql  db_setup.sql
