[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["varun"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "5.0.4"
isort = "^5.12.0"
click = "^8.1.4"
black = "^23.3.0"
psycopg2-binary = "^2.9.6"
pytest = "^7.4.0"
sqlalchemy = "^2.0.18"
sqlparse = "^0.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=80
